crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__type_alias_bad_body.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "Code:\n\ntype alias account = 42"
---
nash::diagnostic

  × I was partway through parsing a type alias, but I got stuck here:
   ╭─[src/Main.nash:1:22]
 1 │ type alias account = 42
   ·                      ─
   ╰────
  help: I was expecting to see a type next. Try putting int or string for now?
