crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__type_alias_missing_equals.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "Code:\n\ntype alias account"
---
PROBLEM IN TYPE ALIAS

  × I am partway through parsing a type alias, but I got stuck here:
   ╭─[src/Main.nash:1:19]
 1 │ type alias account
   ·                   ─
   ╰────
  help: I was expecting to see a type variable or an equals sign next.

        Note: Here is an example of a valid `type alias` for reference:

            type alias Account = { owner : Bytes, balance : Int }

        This would let us use `Account` as a shorthand for that record type. Using this
        shorthand makes type annotations much easier to read, and makes changing code
        easier if you decide later that there is more to an account than owner and
        balance!
