crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__type_indent_in_alias.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "42"
---
nash::syntax

  × Expected an indented type in the type alias.
   ╭─[src/Main.nash:1:1]
 1 │ 42
   · ─
   ╰────
  help: Indent the type to continue the declaration.
