crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__type_indent_in_custom_type.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "type box = Box\nint"
---
nash::syntax

  × Expected an indented type in the datatype declaration.
   ╭─[src/Main.nash:2:1]
 1 │ type box = Box
 2 │ int
   · ─
   ╰────
  help: Indent the type to continue the declaration.
