crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__type_record_missing_colon.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "Code:\n\nf : { x int }\nf = 1"
---
nash::syntax

  × Expected `:` after the field name.
   ╭─[src/Main.nash:1:9]
 1 │ f : { x int }
   ·         ─
 2 │ f = 1
   ╰────
  help: Separate the field name and its type with `:`.
