crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__type_record_reserved_field.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: if
---
nash::diagnostic

  × I am partway through parsing a record type, but I got stuck on this field name:
   ╭─[src/Main.nash:1:1]
 1 │ if
   · ──
   ╰────
  help: It looks like you are trying to use `if` as a field name, but that is a reserved
        word. Try using a different name!
