crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__type_record_trailing_comma.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "}"
---
EXTRA COMMA

  × I am partway through parsing a record type, but I got stuck here:
   ╭─[src/Main.nash:1:1]
 1 │ }
   · ─
   ╰────
  help: Trailing commas are not allowed in record types. Try deleting the comma that
        appears before this closing curly brace.

        Note: If you are trying to define a record type across multiple lines, I
        recommend using this format:

            { name : string
            , age : int
            , value : 'a
            }

        Notice that each line starts with some indentation. Usually two or four spaces.
        This is the stylistic convention in the Nash ecosystem.
