crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__type_reserved_word.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: if
---
RESERVED WORD

  × I was expecting to see a type next, but I got stuck on this reserved word:
   ╭─[src/Main.nash:1:1]
 1 │ if
   · ──
   ╰────
  help: It looks like you are trying to use `if` as a type variable, but it is a
        reserved word. Try using a different name!
