crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__type_start_bad_in_annotation.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "Code:\n\nf : 42\nf = 1"
---
  × Expected a type in the annotation for `f`.
   ╭─[src/Main.nash:1:5]
 1 │ f : 42
   ·     ─
 2 │ f = 1
   ╰────
  help: Write a type name or a quoted type variable, such as `'a`.
